--- a/assets/css/qrcode.css
+++ b/assets/css/qrcode.css
@@ -36,6 +36,11 @@
     color: var(--white);
     font-weight: 700;
     font-size: 13px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .container_submit {
@@ -55,6 +60,10 @@
     border-radius: 30px;
     font-weight: 700;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .ajuda {
