--- a/assets/css/check.css
+++ b/assets/css/check.css
@@ -47,5 +47,10 @@
     border: none;
     border-radius: 30px;
     background-color: var(--green);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     cursor: pointer;
 }
