--- a/assets/css/configuracoes.css
+++ b/assets/css/configuracoes.css
@@ -63,7 +63,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px
+    padding: 0 20px;
+}
+
+a {
+    text-decoration: none;
+    color: var(--black);
+    cursor: pointer;
 }
 
 .container_funcoes:nth-last-child(2) {
@@ -80,4 +86,10 @@
     border: none;
     font-family: var(--Inter);
     font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    cursor: pointer;
 }
