--- a/assets/css/historico.css
+++ b/assets/css/historico.css
@@ -69,3 +69,20 @@ tr, td {
     align-items: center;
     width: 84px;
 }
+
+.button {
+    width: 242px;
+    height: 40px; 
+    background: var(--green);
+    color: var(--white);
+    border: none;
+    border-radius: 30px;
+    font-weight: 700;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    cursor: pointer;
+}
