--- a/assets/css/qrcode.css
+++ b/assets/css/qrcode.css
@@ -64,7 +64,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    cursor: pointer
+    cursor: pointer;
+    text-decoration: none
 }
 
 .ajuda {
