--- a/assets/css/qrcode2.css
+++ b/assets/css/qrcode2.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 140px;
+    padding-bottom: 40px;
 }
 
 .titulo {
@@ -39,4 +39,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.button {
+    width: 242px;
+    height: 40px; 
+    background: var(--green);
+    color: var(--white);
+    border: none;
+    border-radius: 30px;
+    font-weight: 700;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    cursor: pointer;
 }
