--- a/assets/css/senha.css
+++ b/assets/css/senha.css
@@ -73,5 +73,10 @@
     font-size: 16px;
     border: none;
     border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     cursor: pointer;
 }
